# myownradio-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  bitbucket-pipelines.yml  bower.json  composer.json  devenv-nodejs.mk  devenv-rust.mk  devenv.mk  dna.html  docker-compose.yml  example.properties  gulpfile.js  index.html  index.php  package-lock.json  package.json  phpunit.xml.dist  pom.xml  robots.txt  server.php
Chart/: Chart.yaml
SETUP/: tables.sql
services/radio-manager-backend/: .devenv-labels  .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-dev  Makefile  README.md
services/radio-manager-backend/src/: config.rs  data_structures.rs  http.rs  main.rs  mysql_client.rs  pubsub_client.rs  system.rs  utils.rs  web_egress_controller_client.rs
services/radio-manager-backend/src/http_extractors/: user_id.rs
services/radio-manager-backend/src/http_handlers/: internal_radio_streamer.rs  mod.rs  public_schedule.rs  public_streams.rs  user_audio_tracks.rs  user_tracks.rs
services/radio-manager-backend/src/http_server/: constants.rs  http.rs  mod.rs  response.rs
services/radio-manager-backend/src/http_server/handlers/: auth.rs  forward_auth.rs  internal_egress_process.rs  internal_radio_streamer.rs  mod.rs  public_auth.rs  public_auth_v0.rs  public_schedule.rs  public_streams.rs  user_audio_stream.rs  user_audio_tracks.rs  user_audio_tracks_v2.rs  user_outgoing_stream.rs  user_stream_control.rs  user_stream_destinations.rs  user_streams.rs
services/radio-manager-backend/src/models/: audio_track.rs  mod.rs  stream.rs  stream_ext.rs  types.rs
services/radio-manager-backend/src/repositories/: audio_tracks.rs  mod.rs  stream_audio_tracks.rs  streams.rs
services/radio-manager-backend/src/services/: ffmpeg_service.rs  mod.rs  stream_service.rs  stream_service_utils.rs
services/radio-manager-backend/src/services/auth/: action_token_claims.rs  auth_service.rs  auth_token_claims.rs  auth_token_claims_ext.rs  auth_token_service.rs  legacy_auth_token_claims.rs  mod.rs
services/radio-manager-backend/src/storage/: mod.rs
services/radio-manager-backend/src/storage/db/: mod.rs  row_utils.rs
services/radio-manager-backend/src/storage/db/entities/: mod.rs
services/radio-manager-backend/src/storage/db/repositories/: errors.rs  legacy_sessions.rs  mod.rs  outgoing_streams.rs  stream_destinations.rs  streams.rs  user_stream_tracks.rs  user_tracks.rs  users.rs
services/radio-manager-backend/src/storage/fs/: local.rs  mod.rs  s3.rs  utils.rs
services/radio-manager-backend/src/tasks/: mod.rs  streams.rs
services/radio-streamer/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile-dev  Makefile
services/radio-streamer/crates/ffmpeg/: Cargo.toml
services/radio-streamer/crates/ffmpeg/src/: decoder.rs  lib.rs  utils.rs
services/radio-streamer/crates/ffmpeg/tests/fixtures/: test_file.aac  test_file.m4a
services/radio-streamer/crates/myownradio-channel-bot/: Cargo.toml
services/radio-streamer/crates/myownradio-channel-bot/src/: loop.rs  main.rs  playlist_processor.rs  runner.rs  types.rs
services/radio-streamer/crates/myownradio-channel-utils/: Cargo.toml
services/radio-streamer/crates/myownradio-channel-utils/src/: channel.rs  lib.rs  replay_channel.rs  timed_channel.rs  timeout.rs
services/radio-streamer/crates/myownradio-ffmpeg-utils/: Cargo.toml
services/radio-streamer/crates/myownradio-ffmpeg-utils/src/: decoder.rs  encoder.rs  ffmpeg.rs  generator.rs  lib.rs  transcoder.rs  transcoder_async.rs  utils.rs
services/radio-streamer/crates/myownradio-ffmpeg-utils/tests/fixtures/: test_file.aac  test_file.flac  test_file.m4a  test_file.raw
services/radio-streamer/crates/myownradio-player-loop/: Cargo.toml
services/radio-streamer/crates/myownradio-player-loop/src/: lib.rs  player_loop.rs  player_loop_utils.rs  running_time.rs  types.rs  utils.rs
services/radio-streamer/crates/myownradio-radio-player/: Cargo.toml
services/radio-streamer/crates/myownradio-radio-player/src/: audio_stream.rs  backend_client.rs  types.rs
services/radio-streamer/src/: app.rs  audio_decoder.rs  audio_encoder.rs  audio_formats.rs  audio_stream.rs  audio_stream_utils.rs  backend_client.rs  codec.rs  config.rs  constants.rs  icy_metadata.rs  macros.rs  main.rs  metrics.rs  mor_backend_client.rs  restart_registry.rs  stream_compositor.rs  streams_registry.rs  transcoder.rs  types.rs  utils.rs
services/radio-streamer/src/channel/: channel_player_factory.rs  channel_player_registry.rs  factory.rs  mod.rs  registry.rs
services/radio-streamer/src/helpers/: io.rs  math.rs  mod.rs  multi_consumer.rs  multi_receiver.rs
services/radio-streamer/src/http/: channel.rs  listen.rs  metrics.rs  mod.rs  streaming.rs
services/radio-streamer/src/http/utils/: icy_muxer.rs  mod.rs
services/radio-streamer/src/ingest/: mod.rs  stream.rs  streams_registry.rs  timed_channel.rs
services/radio-streamer/src/stream/: channel_encoder.rs  channel_player.rs  channel_player_factory.rs  channel_player_registry.rs  constants.rs  decoder_registry.rs  encoder_registry.rs  ffmpeg.rs  ffmpeg_decoder.rs  ffmpeg_encoder.rs  icy_muxer.rs  mod.rs  player_loop.rs  player_registry.rs  replay_timed_channel.rs  shared_player.rs  stream.rs  streams_registry.rs  timed_channel.rs  timesync_channel.rs  types.rs
services/radio-streamer/src/stream/ffmpeg/: decoder.rs  mod.rs  utils.rs
services/radio-streamer/src/stream/util/: channels.rs  clock.rs  ffmpeg.rs  mod.rs  process.rs  time.rs
services/radio-streamer/src/utils/: stream.rs
services/radio-streamer/tests/fixtures/: test_file.flac
services/radiomanager-web-egress/: .env.example  Cargo.toml  Dockerfile  Makefile
services/radiomanager-web-egress-controller/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile
services/radiomanager-web-egress-controller/src/: backend_client.rs  config.rs  http.rs  k8s.rs  k8s_utils.rs  main.rs  stream_events.rs  types.rs
services/radiomanager-web-egress/src/: config.rs  gstreamer_utils.rs  main.rs  pipeline.rs  stream.rs
(+2041 files in other folders)
