[package]
name = "radio-manager-backend"
version = "0.0.1"
authors = ["Roman Lakhtadyr <roman.lakhtadyr@gmail.com>"]
edition = "2021"

[dependencies]
actix-server = "2.1.1"
actix-rt = "2.1.0"
actix-http = "3.2.1"
actix-multipart = "0.4.0"
serde_json = "1.0.96"
serde_repr = "0.1.12"
envy = "0.4.2"
futures = "0.3.28"
bytebuffer = "0.2.1"
serde_millis = "0.1.1"
dotenv = "0.15.0"
scooby = "0.4.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
async-trait = "0.1.72"
chrono = "0.4.26"
reqwest = "0.11.17"

[dependencies.sqlx]
version = "0.7.1"
features = ["mysql", "runtime-async-std-native-tls", "uuid", "chrono", "macros"]

[dependencies.actix-web]
version = "4.0.0-beta.4"
features = ["rustls"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]

[dependencies.prometheus]
version = "0.12.0"
features = ["process"]

[dependencies.serde]
version = "1.0.163"
features = ["derive"]

[dependencies.thiserror]
version = "1.0.40"
