[package]
name = "radio-manager-backend"
version = "2.0.0"
authors = ["Roman Lakhtadyr <roman.lakhtadyr@gmail.com>"]
edition = "2021"

[dependencies]
actix-server = "2.1.1"
actix-rt = "2.1.0"
actix-http = "3.2.1"
actix-multipart = "0.4.0"
serde_json = "1.0.96"
serde_repr = "0.1.16"
envy = "0.4.2"
futures = "0.3.28"
bytebuffer = "0.2.1"
serde_millis = "0.1.1"
dotenv = "0.15.0"
scooby = "0.4.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
async-trait = "0.1.73"
chrono = { version = "0.4.26", features = ["serde"] }
reqwest = { version = "0.11.23", features = ["json"] }
async-process = "1.7.0"
bytes = "1.4.0"
async-fs = "1.6.0"
jsonwebtoken = { version = "8.3.0" }
qstring = "0.7.2"
bcrypt = "0.15.0"
email_address = "0.2.4"
tokio = { version = "1.41.0", features = ["fs"] }

[dependencies.sqlx]
version = "0.8.0"
features = ["mysql", "runtime-async-std-native-tls", "uuid", "chrono", "macros"]

[dependencies.actix-web]
version = "4.0.0-beta.4"
features = ["rustls"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]

[dependencies.prometheus]
version = "0.12.0"
features = ["process"]

[dependencies.serde]
version = "1.0.163"
features = ["derive"]

[dependencies.thiserror]
version = "1.0.50"
