[package]
name = "myownradio-channel-utils"
version = "0.1.0"
edition = "2021"

[lib]
# Necessary for CLI options to work on benches
bench = false

[dependencies.thiserror]
version = "1.0.40"

[dependencies.tracing]
version = "0.1.37"

[dependencies.async-trait]
version = "0.1.72"

[dependencies.futures]
version = "0.3.28"

[dependencies.actix-rt]
version = "2.8.0"
