[package]
name = "myownradio-ffmpeg-utils"
description = "Tools for working with audio files using the ffmpeg library"
version = "0.1.0"
authors = ["Roman Lakhtadyr <roman.lakhtadyr@gmail.com>"]
edition = "2021"
include = ["/src", "/Cargo.toml"]

[lib]
# Necessary for CLI options to work on benches
bench = false

[dependencies.ffmpeg-next]
git = "https://github.com/pyldin601/rust-ffmpeg.git"
rev = "67d02794cf8f339a9eb4036f7252b6c50388184c"

[dependencies.iter_tools]
version = "0.1.4"

[dependencies.futures]
version = "0.3.28"

[dependencies.actix-rt]
version = "2.8.0"

[dependencies.thiserror]
version = "1.0.50"

[dependencies.tracing]
version = "0.1.37"

[dev-dependencies.tracing-test]
version = "0.2.4"

[dependencies.ctor]
version = "0.2.6"
