[package]
name = "myownradio-player-loop"
version = "0.1.0"
edition = "2021"

[dependencies.myownradio-ffmpeg-utils]
version = "0.1.0"
path = "../myownradio-ffmpeg-utils"

[dependencies.thiserror]
version = "1.0.40"

[dependencies.tracing]
version = "0.1.37"

[dependencies.trait-async]
version = "0.1.24"

[dependencies.actix-rt]
version = "2.8.0"
